--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,10 @@ itsdangerous==0.24
 Jinja2==2.10
 kombu==4.1.0
 MarkupSafe==1.0
+msgpack-python==0.5.6
 PyMySQL==0.8.0
 pytz==2018.4
+redis==2.10.6
 six==1.11.0
 SQLAlchemy==1.2.7
 vine==1.1.4
